db working for postgres